--- a/index.html
+++ b/index.html
@@ -241,23 +241,21 @@
         <div class="columns is-centered">
           <div class="column has-text-centered">
             <!-- TODO: Replace with your paper title -->
-            <h1 class="title is-1 publication-title">Academic Project Page</h1>
+            <h1 class="title is-1 publication-title">VR-3R: Zero-shot Interactive 3D Scene Reconstruction from a Single Image in Virtual Reality
+</h1>
             <div class="is-size-5 publication-authors">
               <!-- TODO: Replace with your paper authors and their personal links -->
               <span class="author-block">
-                <a href="FIRST AUTHOR PERSONAL LINK" target="_blank">First Author</a><sup>*</sup>,</span>
+                <a href="FIRST AUTHOR PERSONAL LINK" target="_blank">Anonymous</a><sup>*</sup></span>
                 <span class="author-block">
-                  <a href="SECOND AUTHOR PERSONAL LINK" target="_blank">Second Author</a><sup>*</sup>,</span>
-                  <span class="author-block">
-                    <a href="THIRD AUTHOR PERSONAL LINK" target="_blank">Third Author</a>
-                  </span>
+                  
                   </div>
 
                   <div class="is-size-5 publication-authors">
                     <!-- TODO: Replace with your institution and conference/journal info -->
-                    <span class="author-block">Institution Name<br>Conference name and year</span>
+                    <span class="author-block"><br>IEEE VR 2026 subimission</span>
                     <!-- TODO: Remove this line if no equal contribution -->
-                    <span class="eql-cntrb"><small><br><sup>*</sup>Indicates Equal Contribution</small></span>
+                    <span class="eql-cntrb"><small><br><sup></sup></small></span>
                   </div>
 
                   <div class="column has-text-centered">
@@ -341,8 +339,28 @@
         <div class="content has-text-justified">
           <!-- TODO: Replace with your paper abstract -->
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ullamcorper tellus sed ante aliquam tempus. Etiam porttitor urna feugiat nibh elementum, et tempor dolor mattis. Donec accumsan enim augue, a vulputate nisi sodales sit amet. Proin bibendum ex eget mauris cursus euismod nec et nibh. Maecenas ac gravida ante, nec cursus dui. Vivamus purus nibh, placerat ac purus eget, sagittis vestibulum metus. Sed vestibulum bibendum lectus gravida commodo. Pellentesque auctor leo vitae sagittis suscipit.
-          </p>
+We present VR-3R, a zero-shot 3D scene reconstruction framework
+that enables immersive VR interaction from a single real-world im-
+age. The increasing demand for mixed-reality applications, includ-
+ing memory recollection and remote space exploration, highlights
+the importance of reconstructing 3D environments from arbitrary
+photographs. Despite advances in single-image 3D scene genera-
+tion, existing methods remain limited by incomplete background
+recovery under occlusion and inaccurate object placement caused
+by monocular depth estimation. VR-3R addresses these challenges
+by integrating large-scale model priors to reconstruct high-quality
+3D scenes without additional training. The framework incorporates
+VLM-based foreground–background separation and depth align-
+ment with unprojected point clouds, achieving both scene-level
+consistency and detailed object recovery. Experiments on the 3D-
+FRONT dataset and in-the-wild real images demonstrate that VR-
+3R generates realistic backgrounds and accurate 3D models across
+diverse scenarios. The method improves Chamfer Distance by over
+23% and F-score by more than 6% at the object level, and achieves
+12% and 18% gains in FID and FID-CLIP at the scene level. Our
+framework reconstructs interactive and immersive VR spaces from
+a single image, enabling practical deployment in real-world appli-
+cations.          </p>
         </div>
       </div>
     </div>
