--- a/index.html
+++ b/index.html
@@ -266,7 +266,22 @@
 
          
 
-
+<section class="section hero is-light">
+  <div class="container is-max-desktop">
+    <div class="columns is-centered has-text-centered">
+      <div class="column is-four-fifths">
+        <h2 class="title is-3" style="color: #2563eb;">
+          <b>TL;DR</b>
+        </h2>
+        <div class="content has-text-justified">
+          <p>
+            We introduce VR-3R, a zero-shot framework for reconstructing compositional 3D scenes from a single image in VR.
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
 <!-- Teaser video-->
 <section class="hero teaser">
   <div class="container is-max-desktop">
