--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
 
   <!-- TODO: Replace with your paper title and authors -->
-  <title>PAPER_TITLE - AUTHOR_NAMES | Academic Research</title>
+  <title> VR-3R: Zero-shot Interactive 3D Scene Reconstruction from a Single Image in Virtual Reality | Academic Research</title>
   
   <!-- Favicon and App Icons -->
   <link rel="icon" type="image/x-icon" href="static/images/favicon.ico">
@@ -289,6 +289,16 @@ cations.          </p>
 
 
 <!-- End teaser video -->
+<section class="section">
+  <div class="container is-max-desktop">
+    <h2 class="title is-3 has-text-centered">Method</h2>
+    <div class="columns is-centered">
+      <div class="column is-full-width has-text-centered">
+        <img src="static/images/method.png" alt="Method Diagram" style="max-width:100%; height:auto;">
+      </div>
+    </div>
+  </div>
+</section>
 <section class="hero is-small">
     <div class="hero-body">
         <div class="container is-max-desktop">
