--- a/index.html
+++ b/index.html
@@ -236,15 +236,13 @@
     </div>
   </div>
 </section>
-<!-- Paper abstract -->
-<section class="section hero is-light">
-  <div class="container is-max-desktop">
-    <div class="columns is-centered has-text-centered">
-      <div class="column is-four-fifths">
-        <h2 class="title is-3">Abstract</h2>
-        <div class="content has-text-justified">
-          <!-- TODO: Replace with your paper abstract -->
-          <p>
+<!-- Paper abstract --><section class="hero teaser">
+  <div class="container is-max-desktop">
+    <div class="columns is-centered has-text-centered">
+      <div class="column is-four-fifths">
+        <h2 class="title is-3">Abstract</h2>
+        <div class="content has-text-justified">
+                    <p>
 We present VR-3R, a zero-shot 3D scene reconstruction framework
 that enables immersive VR interaction from a single real-world image. The increasing demand for mixed-reality applications, including memory recollection and remote space exploration, highlights
 the importance of reconstructing 3D environments from arbitrary
@@ -262,11 +260,11 @@ diverse scenarios. The method improves Chamfer Distance by over
 12% and 18% gains in FID and FID-CLIP at the scene level. Our
 framework reconstructs interactive and immersive VR spaces from
 a single image, enabling practical deployment in real-world appli-
-cations.          </p>
-        </div>
-      </div>
-    </div>
-  </div>
+cations.          </p>
+        </div>
+      </div>
+    </div>
+  </div>
 </section>
 <!-- End paper abstract -->
             
