--- a/index.html
+++ b/index.html
@@ -298,49 +298,67 @@ cations.          </p>
   </div>
 </section>
 <section class="hero is-small">
-    <div class="hero-body">
-        <div class="container is-max-desktop">
-            <h2 class="title is-3 has-text-centered">Interactive 3D Demos</h2>
-            <div class="columns is-centered is-multiline">
-                <div class="column is-one-third">
-                    <div class="sketchfab-embed-wrapper">
-                        <iframe title="Ours_9850" frameborder="0" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" allow="autoplay; fullscreen; xr-spatial-tracking" xr-spatial-tracking execution-while-out-of-viewport execution-while-not-rendered web-share src="https://sketchfab.com/models/1c841aabd6854ca7b0148fe92d5639a8/embed"></iframe>
-                        <p style="font-size: 13px; font-weight: normal; margin: 5px; color: #4A4A4A;">
-                            <a href="https://sketchfab.com/3d-models/ours-9850-1c841aabd6854ca7b0148fe92d5639a8?utm_medium=embed&utm_campaign=share-popup&utm_content=1c841aabd6854ca7b0148fe92d5639a8" target="_blank" rel="nofollow" style="font-weight: bold; color: #1CAAD9;"> Ours_9850 </a> by <a href="https://sketchfab.com/drkch2?utm_medium=embed&utm_campaign=share-popup&utm_content=1c841aabd6854ca7b0148fe92d5639a8" target="_blank" rel="nofollow" style="font-weight: bold; color: #1CAAD9;"> drkch2 </a> on <a href="https://sketchfab.com?utm_medium=embed&utm_campaign=share-popup&utm_content=1c841aabd6854ca7b0148fe92d5639a8" target="_blank" rel="nofollow" style="font-weight: bold; color: #1CAAD9;">Sketchfab</a>
-                        </p>
-                    </div>
-                </div>
-
-                <div class="column is-one-third">
-                    <div class="sketchfab-embed-wrapper">
-                        <iframe title="Sgour_12" frameborder="0" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" allow="autoplay; fullscreen; xr-spatial-tracking" xr-spatial-tracking execution-while-out-of-viewport execution-while-not-rendered web-share src="https://sketchfab.com/models/b0b206223dfc47eda4a139f9b16c2920/embed"></iframe>
-                        <p style="font-size: 13px; font-weight: normal; margin: 5px; color: #4A4A4A;">
-                            <a href="https://sketchfab.com/3d-models/sgour-12-b0b206223dfc47eda4a139f9b16c2920?utm_medium=embed&utm_campaign=share-popup&utm_content=b0b206223dfc47eda4a139f9b16c2920" target="_blank" rel="nofollow" style="font-weight: bold; color: #1CAAD9;"> Sgour_12 </a> by <a href="https://sketchfab.com/drkch2?utm_medium=embed&utm_campaign=share-popup&utm_content=b0b206223dfc47eda4a139f9b16c2920" target="_blank" rel="nofollow" style="font-weight: bold; color: #1CAAD9;"> drkch2 </a> on <a href="https://sketchfab.com?utm_medium=embed&utm_campaign=share-popup&utm_content=b0b206223dfc47eda4a139f9b16c2920" target="_blank" rel="nofollow" style="font-weight: bold; color: #1CAAD9;">Sketchfab</a>
-                        </p>
-                    </div>
-                </div>
-
-                <div class="column is-one-third">
-                    <div class="sketchfab-embed-wrapper">
-                                <iframe
-          title="Ours_7"
-          loading="lazy"
-          style="width: 100%; aspect-ratio: 16/9; border: 0;"
-          allow="autoplay; fullscreen; xr-spatial-tracking; web-share"
-          xr-spatial-tracking
-          execution-while-out-of-viewport
-          execution-while-not-rendered
-          web-share
-          src="https://sketchfab.com/models/5502f56a44f148b6bd8ba67e3ada18ac/embed">
-        </iframe>
-                        <h2 class="subtitle has-text-centered">
-                            Another interactive demo.
-                        </h2>
-                    </div>
-                </div>
-            </div>
+  <div class="hero-body">
+    <div class="container is-max-desktop">
+      <h2 class="title is-3 has-text-centered">Interactive 3D Demos</h2>
+      <div class="columns is-centered is-multiline">
+        <div class="column is-one-third">
+          <div class="sketchfab-embed-wrapper">
+            <iframe
+              title="Ours_9850"
+              loading="lazy"
+              style="width: 100%; aspect-ratio: 16/9; border: 0;"
+              allow="autoplay; fullscreen; xr-spatial-tracking; web-share"
+              xr-spatial-tracking
+              execution-while-out-of-viewport
+              execution-while-not-rendered
+              web-share
+              src="https://sketchfab.com/models/1c841aabd6854ca7b0148fe92d5639a8/embed"
+            ></iframe>
+            <h2 class="subtitle has-text-centered">
+              Ours_9850
+            </h2>
+          </div>
         </div>
+        <div class="column is-one-third">
+          <div class="sketchfab-embed-wrapper">
+            <iframe
+              title="Sgour_12"
+              loading="lazy"
+              style="width: 100%; aspect-ratio: 16/9; border: 0;"
+              allow="autoplay; fullscreen; xr-spatial-tracking; web-share"
+              xr-spatial-tracking
+              execution-while-out-of-viewport
+              execution-while-not-rendered
+              web-share
+              src="https://sketchfab.com/models/b0b206223dfc47eda4a139f9b16c2920/embed"
+            ></iframe>
+            <h2 class="subtitle has-text-centered">
+              Sgour_12
+            </h2>
+          </div>
+        </div>
+        <div class="column is-one-third">
+          <div class="sketchfab-embed-wrapper">
+            <iframe
+              title="Ours_7"
+              loading="lazy"
+              style="width: 100%; aspect-ratio: 16/9; border: 0;"
+              allow="autoplay; fullscreen; xr-spatial-tracking; web-share"
+              xr-spatial-tracking
+              execution-while-out-of-viewport
+              execution-while-not-rendered
+              web-share
+              src="https://sketchfab.com/models/5502f56a44f148b6bd8ba67e3ada18ac/embed"
+            ></iframe>
+            <h2 class="subtitle has-text-centered">
+              Ours_7
+            </h2>
+          </div>
+        </div>
+      </div>
     </div>
+  </div>
 </section>
             
 
