--- a/index.html
+++ b/index.html
@@ -259,8 +259,7 @@ diverse scenarios. The method improves Chamfer Distance by over
 23% and F-score by more than 6% at the object level, and achieves
 12% and 18% gains in FID and FID-CLIP at the scene level. Our
 framework reconstructs interactive and immersive VR spaces from
-a single image, enabling practical deployment in real-world appli-
-cations.          </p>
+a single image, enabling practical deployment in real-world applications.          </p>
         </div>
       </div>
     </div>
@@ -355,7 +354,73 @@ cations.          </p>
   </div>
 </section>
             
+<section class="section">
+  <div class="container is-max-desktop">
+    <h2 class="title is-3 has-text-centered">Method</h2>
+    <div class="columns is-centered">
+      <div class="column is-full-width has-text-centered">
+        <img src="static/images/method.png" alt="Method Diagram" style="max-width:100%; height:auto;">
+      </div>
+    </div>
+  </div>
+</section>
+<section class="hero is-small">
+  <div class="hero-body">
+    <div class="container is-max-desktop">
+      <h2 class="title is-3 has-text-centered">Interactive 3D Demos</h2>
+      <div class="columns is-centered is-multiline">
+        <div class="column is-one-third">
+          <div class="sketchfab-embed-wrapper">
+            <iframe
+  title="Ours_cat"
+  loading="lazy"
+  style="width: 100%; aspect-ratio: 16/9; border: 0;"
+  allow="autoplay; fullscreen; xr-spatial-tracking; web-share"
+  xr-spatial-tracking
+  execution-while-out-of-viewport
+  execution-while-not-rendered
+  web-share
+  src="https://sketchfab.com/models/2a58c8f2ecca487da0650ac5cc936a12/embed"
+></iframe>
 
+          </div>
+        </div>
+        <div class="column is-one-third">
+          <div class="sketchfab-embed-wrapper">
+            <iframe
+              title="Sgour_12"
+              loading="lazy"
+              style="width: 100%; aspect-ratio: 16/9; border: 0;"
+              allow="autoplay; fullscreen; xr-spatial-tracking; web-share"
+              xr-spatial-tracking
+              execution-while-out-of-viewport
+              execution-while-not-rendered
+              web-share
+              src="https://sketchfab.com/models/b0b206223dfc47eda4a139f9b16c2920/embed"
+            ></iframe>
+
+          </div>
+        </div>
+        <div class="column is-one-third">
+          <div class="sketchfab-embed-wrapper">
+            <iframe
+              title="Ours_7"
+              loading="lazy"
+              style="width: 100%; aspect-ratio: 16/9; border: 0;"
+              allow="autoplay; fullscreen; xr-spatial-tracking; web-share"
+              xr-spatial-tracking
+              execution-while-out-of-viewport
+              execution-while-not-rendered
+              web-share
+              src="https://sketchfab.com/models/5502f56a44f148b6bd8ba67e3ada18ac/embed"
+            ></iframe>
+
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
 
 
 
