--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
     </div>
   </div>
 </section>
-<!-- Paper abstract --><section class="hero teaser">
+<!-- Paper abstract --><section class="hero">
   <div class="container is-max-desktop">
     <div class="columns is-centered has-text-centered">
       <div class="column is-four-fifths">
