--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
   <div class="container is-max-desktop">
     <div class="columns is-centered has-text-centered">
       <div class="column is-four-fifths">
-        <h2 class="title is-3" style="color: #2563eb;">
+        <h2 class="title is-3 has-text-centered">
           <b>TL;DR</b>
         </h2>
         <div class="content has-text-justified">
