--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
   <title> VR-3R: Zero-shot Interactive 3D Scene Reconstruction from a Single Image in Virtual Reality | Academic Research</title>
   
   <!-- Favicon and App Icons -->
-  <link rel="icon" type="image/x-icon" href="static/images/favicon.ico">
-  <link rel="apple-touch-icon" href="static/images/favicon.ico">
+  <link rel="icon" type="image/x-icon" href="static/images/icon.ico">
+  <link rel="-icon" href="static/images/icon.ico">
   
   <!-- Critical CSS - Load synchronously -->
   <link rel="stylesheet" href="static/css/bulma.min.css">
