--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
 
                   <div class="is-size-5 publication-authors">
                     <!-- TODO: Replace with your institution and conference/journal info -->
-                    <span class="author-block"><br>IEEE VR 2026 subimission</span>
+                    <span class="author-block"><br>IEEE VR 2026 submission</span>
                     <!-- TODO: Remove this line if no equal contribution -->
                     <span class="eql-cntrb"><small><br><sup></sup></small></span>
                   </div>
