--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
         </h2>
         <div class="content has-text-justified">
           <p>
-            We introduce VR-3R, a zero-shot framework for reconstructing compositional 3D scenes with background from a single image.
+            We introduce VR-3R, a zero-shot framework that reconstructs high-quality 3D scenes robust to shadows and occlusions from a single RGB image by strategically integrating large-scale model priors.
           </p>
         </div>
       </div>
