--- a/index.html
+++ b/index.html
@@ -231,6 +231,8 @@
           <p>
             We introduce VR-3R, a zero-shot framework that reconstructs high-quality 3D scenes robust to shadows and occlusions from a single RGB image by strategically integrating large-scale model priors.
           </p>
+                <div class="column is-four-fifths has-text-justified"> <img src="static/images/tldr.png" alt="Method Diagram" style="max-width:100%; height:auto; margin-bottom: 1.5rem;"> <h2 class="subtitle has-text-justified">
+
         </div>
       </div>
     </div>
