--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
 
                   <div class="is-size-5 publication-authors">
                     <!-- TODO: Replace with your institution and conference/journal info -->
-                    <span class="author-block"><br>IEEE VR 2026 submission</span>
+                    <span class="author-block"><br>IEEE VR 2026 Submission</span>
                     <!-- TODO: Remove this line if no equal contribution -->
                     <span class="eql-cntrb"><small><br><sup></sup></small></span>
                   </div>
@@ -223,18 +223,17 @@
 <section class="section hero is-light">
   <div class="container is-max-desktop">
     <div class="columns is-centered has-text-centered">
-      <div class="column is-four-fifths">
-        <h2 class="title is-3 has-text-centered">
+      <div class="column is-four-fifths"> <h2 class="title is-3 has-text-centered">
           <b>TL;DR</b>
         </h2>
-        <div class="content has-text-justified">
-          <p>
+        <div class="content"> <p class="has-text-justified">
             We introduce VR-3R, a zero-shot framework that reconstructs high-quality 3D scenes robust to shadows and occlusions from a single RGB image by strategically integrating large-scale model priors.
           </p>
-                <div class="column is-four-fifths has-text-justified"> <img src="static/images/tldr.png" alt="Method Diagram" style="max-width:100%; height:auto; margin-bottom: 1.5rem;"> <h2 class="subtitle has-text-justified">
-
         </div>
-      </div>
+        <div class="has-text-centered" style="padding-top: 1.5rem;">
+          <img src="static/images/tldr.png" alt="TLDR Diagram" style="max-width:100%; height:auto;">
+        </div>
+        </div>
     </div>
   </div>
 </section>
